--- a/main.tex
+++ b/main.tex
@@ -47,12 +47,20 @@
 
 \maketitle
 \begin{abstract}
-We consider the IRL framework for apprenticeship learning. %1
-Current IRL algorithms use a simple Monte-Carlo estimation to approximate the feature expectation of both the expert and the policy under evaluation. %2
-In this paper, we propose another method for estimating the feature expectation based on the Least Square Temporal Difference (LSTD) family of algorithms. %3
-This new method allows for batch, off-policy appreticeship learning in situations where the dynamics of the system remains unknown. %4
-By testing it on a classical problem, we show that our method is empirically sound.%5
-We also provide some theoretical results.%6
+  This paper adresses the problem of apprenticeship learning, that
+  is learning control policies from demonstration by an expert. An
+  efficient framework for it is inverse reinforcement learning
+  (IRL). Based on the assumption that the expert maximizes a utility
+  function, IRL aims at learning the reward which defines this
+  utility function from example trajectories. Many IRL algorithms
+  assume that the reward function is linearly parameterized and rely
+  on the computation of some associated \emph{feature expectations},
+  which is done through Monte Carlo simulation. However, this
+  assumes to have full trajectories for the expert policy as well as
+  at least a generative model for intermediate policies. In this
+  paper, we introduce a temporal difference method, namely LSTD-$\mu$, to compute these
+  feature expectations. This allows extending apprenticeship
+  learning to a batch and off-policy setting.
 \end{abstract}
 \section{Introduction}
 
