--- a/main.tex
+++ b/main.tex
@@ -31,7 +31,7 @@
 \usepackage{algorithmic}
 \newcommand{\argmax}{\operatorname*{argmax}} %\operatorname* pour les op. pouvant admettre des limites...
 
-\title{Batch, Off-Policy, Model-free Apprencticeship Learning}
+\title{Apprentissage par imitation étendu au cas batch, off-policy et sans modèle}
 %\author{Robert}
 %   1. Supelec-Metz Campus, IMS Reasearch group, France. \texttt{prenom.nom@supelec.fr}}
 \author{Edouard Klein\inst{1}\inst{3} \and Matthieu Geist\inst{1} \and Olivier Pietquin\inst{1}\inst{2}}
@@ -47,7 +47,7 @@
 
 \maketitle
 \begin{abstract}
- Ce papier s'intéresse au problème de l'apprentissage par imitation, c'est à dire la résolution du problème du contrôle optimal à partir de données tirées d'une desmonstration d'expert. L'apprentissage par renforcement inverse (IRL) propose un cadre essicace pour résoudre ce problème. En se basant sur l'hypothèse que l'expert maximise un critère, l'IRL essaie d'apprendre la récompense qui définit ce critère à partir de trajectoires d'exemple. Beaucoup d'algorithmes d'IRL font l'hypothèse de l'existence d'un bon approximateur linéaire pour la fonction de récompense et calculent l'attribut moyen (le cumul moyen pondéré des fonctions de base, relatives à la paramétrisation linéaire supposée de la récompense, évaluées en les états d'une trajectoire associée à une certaine politique)  via une estimation de Monte-Carlo. Cela implique d'avoir accès à des trajectoires complète de l'expert ainsi qu'à au moins un modèle génératif pour tester les politiques intermédiaires. Dans ce papier nous introduisons une méthode de différence temporelle, LSTD-$\mu$, pour calculer cet attribut moyen. Cela permet d'étendre l'apprentissage par imitation aux cas \emph{batch} et \emph{off-policy}.
+ Ce papier s'intéresse au problème de l'apprentissage par imitation, c'est à dire la résolution du problème du contrôle optimal à partir de données tirées d'une desmonstration d'expert. L'apprentissage par renforcement inverse (IRL) propose un cadre efficace pour résoudre ce problème. En se basant sur l'hypothèse que l'expert maximise un critère, l'IRL essaie d'apprendre la récompense qui définit ce critère à partir de trajectoires d'exemple. Beaucoup d'algorithmes d'IRL font l'hypothèse de l'existence d'un bon approximateur linéaire pour la fonction de récompense et calculent l'attribut moyen (le cumul moyen pondéré des fonctions de base, relatives à la paramétrisation linéaire supposée de la récompense, évaluées en les états d'une trajectoire associée à une certaine politique)  via une estimation de Monte-Carlo. Cela implique d'avoir accès à des trajectoires complète de l'expert ainsi qu'à au moins un modèle génératif pour tester les politiques intermédiaires. Dans ce papier nous introduisons une méthode de différence temporelle, LSTD-$\mu$, pour calculer cet attribut moyen. Cela permet d'étendre l'apprentissage par imitation aux cas \emph{batch} et \emph{off-policy}.
 \end{abstract}
 \section{Introduction}
 
@@ -79,10 +79,10 @@ find a compact and complete representation of the task in the form
 of the reward function.
 
 There roughly exist three families of IRL algorithms:
-feature-expectation-based~\cite{abbeel2004apprenticeship,syed2008apprenticeship,syed2008game,ziebart2008maximum},
-marge-maximization-based~\cite{ratliff2006maximum,ratliff2007imitation,ratliff2007boosting,kolter2008hierarchical}
+feature-expectation-based~\citep{abbeel2004apprenticeship,syed2008apprenticeship,syed2008game,ziebart2008maximum},
+marge-maximization-based~\citep{ratliff2006maximum,ratliff2007imitation,ratliff2007boosting,kolter2008hierarchical}
 and approaches based on the parameterization of the policy by the
-reward function~\cite{ramachandran2007bayesian,neu2007apprenticeship}. The first family
+reward function~\citep{ramachandran2007bayesian,neu2007apprenticeship}. The first family
 assumes a linearly parameterized reward function. This naturally
 leads to a linearly parameterized value function, the associated
 feature vector being the so-called feature expectation (defined as
@@ -104,7 +104,7 @@ state-action pairs provided by the expert. The algorithms differs in
 the way this likelihood is maximized.
 
 This paper focuses on the first family of algorithms, and more
-precisely on the seminal work of~\cite{abbeel2004apprenticeship}. All of them
+precisely on the seminal work of~\citet{abbeel2004apprenticeship}. All of them
 rely on the computation of the feature expectation (which depends on
 policies but not on rewards) of (i) the expert and (ii) some
 intermediate policies. The expert's feature expectation is computed
@@ -118,14 +118,14 @@ expectations. It relaxes the predeceasing assumptions: transitions
 of the expert are sufficient (rather than full trajectories) and nor
 the model neither a simulator are necessary to compute intermediate
 feature expectations. This paper focuses on the algorithm introduced
-in~\cite{abbeel2004apprenticeship}, but we are confident that the proposed
+in~\citep{abbeel2004apprenticeship}, but we are confident that the proposed
 approach can be extended to other algorithms based on feature
-expectation computation~\cite{syed2008apprenticeship,syed2008game,ziebart2008maximum}.
+expectation computation~\citep{syed2008apprenticeship,syed2008game,ziebart2008maximum}.
 
 The rest of this paper is organized as follows.
 Section~\ref{sec:back} provides the necessary background,
 notably the definition of feature expectation and its use in the
-seminal IRL algorithm of~\cite{abbeel2004apprenticeship}.
+seminal IRL algorithm of~\citet{abbeel2004apprenticeship}.
 Section~\ref{sec:lstdmu} presents LSTD-$\mu$, our main contribution.
 Section~\ref{sec:exp} provides some preliminary experiments and
 Section~\ref{sec:conclusion} opens perspectives.
@@ -134,7 +134,7 @@ Section~\ref{sec:conclusion} opens perspectives.
 \section{Background}
 \label{sec:back}
 A sequential decision problem is often framed as a Markov Decision
-Process (MDP)~\citep{puterman1994markov}. A MDP is a tuple
+Process (MDP)~\citep{puterman1994markov}. An MDP is a tuple
 $\{S,A,P,R,\gamma\}$ with $S$ being the state space, $A$ the action
 space, $P\in\mathcal{P}(S)^{S\times A}$ the set of Markovian
 transition probabilities, $R\in\mathbb{R}^S$ the reward function
@@ -154,7 +154,7 @@ function) is unknown, learning the optimal control through
 interactions is addressed by reinforcement learning.
 
 For inverse reinforcement learning, the problem is reversed. It is
-assume that an expert acts according to an optimal policy $\pi_E$,
+assumed that an expert acts according to an optimal policy $\pi_E$,
 this policy being optimal according to some unknown reward function
 $R^*$. The goal of inverse reinforcement learning is to learn this
 reward function from sampled trajectories of the expert. This is a
@@ -381,47 +381,51 @@ finite-sample~\citep{lazaric2010finiteLSTD} analysis for example.
 
 \section{Experimental benchmark}
 \label{sec:exp}
+Preliminary experimental results have been obtained. Subsection \ref{ssec:exp} details the protocol and the results while subsection \ref{ssec:quality} inspects the meaning of the different quality criteria. 
 \subsection{Experiment description and results}
-The experimental benchmark chosen here is the same as in \citep{ng2000algorithms}, a 5x5 grid world. The agent is in one of the case of the grid (whose coordinates is the state) and can choose at each step one of the four compass directions (the action). With probability 0.9, the agent moves in the intended direction. With probability 0.1, the direction is randomly drawn (and thus have probability 0.25 to match the original direction). The reward optimized by the expert is 0 everywhere but in the upper-right square, where it is 1. For every policy, an episode ends when the upper right square is attained, or after 20 steps. At the start of each episode, the agent is in the lower-left corner of the grid (the opposite of where the reward is).\\
+\label{ssec:exp}
+The experimental benchmark chosen here is one of those proposed in \citep{ng2000algorithms}, a 5x5 grid world. The agent is in one of the case of the grid (whose coordinates is the state) and can choose at each step one of the four compass directions (the action). With probability 0.9, the agent moves in the intended direction. With probability 0.1, the direction is randomly drawn (and thus have probability 0.25 to match the original direction). The reward optimized by the expert is 0 everywhere except in the upper-right square, where it is 1. For every policy, an episode ends when the upper right square is attained, or after 20 steps. At the start of each episode, the agent is in the lower-left corner of the grid (the opposite of where the reward is).\\
 
-Both the state and action spaces are finite and of small cardinality. Hence, the chosen feature functions $\phi$ and $\psi$ (see equations \ref{eqn:phi} and \ref{eqn:psi} for a remainder of their meaning) are the typical features of a tabular representation : 0 everywhere but at a given index $i$ for which the value is 1. There is a bijective mapping from the input space elements to the indexes $i$ for which the coordinate of the feature is 1.\\
+Both the state and action spaces are finite and of small cardinality. Hence, the chosen feature functions $\phi$ and $\psi$ (see equations (\ref{eqn:phi}) and (\ref{eqn:psi}) for a remainder of their meaning) are the typical features of a tabular representation : 0 everywhere but at a given index $i$ for which the value is 1. There is a bijective mapping from the input space elements to the indexes $i$ for which the coordinate of the feature is 1.\\
 
-Both \citet{abbeel2004apprenticeship}'s algorithm (mc\_ANIRL) and our adaptation (lstd\_ANIRL) are tested side by side. The MDP solver of mc\_ANIRL is LSPI with a (very) big matrix $D$ as a sample source. $\mu_\pi(s_0)$ and $\mu_E(s_0)$ are computed thanks to a (very) big Monte-Carlo estimation. Both these computations are  as good as perfect theoretical solvers for all intended purpose on this toy problem. We thus are in the case intended by \citet{abbeel2004apprenticeship}.\\
+Both \citet{abbeel2004apprenticeship}'s algorithm (from now on referred to as mc\_ANIRL\footnote{Abbeel \& Ng IRL}) and our adaptation (referred t as lstd\_ANIRL) are tested side by side. The MDP solver of mc\_ANIRL is LSPI with a sample source that covers the whole grid (each state has a mean visitation count of more than 150) and draws its action randomly. $\mu^{\pi^(j)}(s_0)$ and $\mu^{\pi_E}(s_0)$ are computed thanks to a Monte-Carlo estimation with enough samples to reduce the variance to less than $0.0001\%$ of the mean. We consider both these computations as perfect theoretical solvers for all intended purpose on this toy problem. We thus are in the case intended by \citet{abbeel2004apprenticeship}.\\
 On the other hand lstd\_ANIRL is used as if it could not have access to the simulator. It uses LSPI and LSTD$\mu$, fed only with the expert's transitions. This corresponds to a real-life setting where data generation is expensive and the system can not be controlled by an untrained machine.\\
 
-We want to compare the porformance of both versions of the algorithm with repect to the number of samples available from the expert, as these samples usually are the bottleneck. The discussion about the choice of the performance metric has its own dedicated subsection (subsection \ref{sec:perf}). We use here the $||\mu(s_0) - \mu_E(s_0)||_2$ error term.\\
+We want to compare the porformance of both versions of the algorithm with repect to the number of samples available from the expert, as these samples usually are the bottleneck. Indeed as they are quite costly (in both means and human time) to generate they are often not in abundance hence the critical need for an algorithm to be expert-sample efficient. The discussion about the choice of the performance metric has its own dedicated subsection (subsection \ref{ssec:quality}). We use here the $||\mu^{\pi^(j)}(s_0) - \mu^{\pi_E}(s_0)||_2$ error term.\\
 
-Figure \ref{fig:E} shows, for some numbers of samples from the expert, the value of $||\mu(s_0)-\mu_E(s_0)||_2$ after the algorithm converged or attained the maximum number of iterations (we used 40). The best policy is found by lstd\_ANIRL after one iteration only\footnote{Precise reasons for what it happens are not clear now, but certainly have something to do with the fact that all the estimations are made along the same distribution of samples.} whereas in mc\_ANIRL convergence happens after at least ten iterations and the best policy is not always the last. The score of the best policy (not the last) is what is plotted here.\\
+Figure \ref{fig:E} shows, for some numbers of samples from the expert, the value of $||\mu^{\pi^(j)}(s_0)-\mu^{\pi_E}(s_0)||_2$ after the algorithm converged or attained the maximum number of iterations (we used 40). The best policy is found by lstd\_ANIRL after one iteration only\footnote{Precise reasons for what it happens are not clear now, but certainly have something to do with the fact that all the estimations are made along the same distribution of samples.} whereas in mc\_ANIRL convergence happens after at least ten iterations and the best policy is not always the last. The score of the best policy (not the last) according to the $||\mu^{\pi^{(j)}}(s_0) - \mu^{\pi_E}(s_0)||_2$ error term is what is plotted here.\\
 
-We can see that although lstd\_ANIRL is not as good as mc\_ANIRL when very few samples are available, both algorithm quickly converge to almost the same value (we don't know yet if the seemingly slightly better performance of lstd\_ANIRL is an artifact). The fact that lstd\_ANIRL can work in a batch, off-policy and model-free setting, while requesting less computing power than mc\_ANIRL makes it suitable to a range of task inaccessible to the mc\_ANIRL version (for example controlling a machine tool working on expensive materials).
+We can see that although lstd\_ANIRL is not as good as mc\_ANIRL when very few samples are available, both algorithm quickly converge to almost the same value (although not low, the number of run so far is not statistically significant enough to allow us to state that the seemingly slightly better performance of lstd\_ANIRL is not an artifact). The fact that lstd\_ANIRL can work in a batch, off-policy and model-free setting, while requesting less computing power than mc\_ANIRL makes it suitable to a range of task inaccessible to the mc\_ANIRL version.
 \subsection{Discussion about the quality criterion}
-Figure \ref{fig:A} and \ref{fig:B} illustrate the difficulty of choosing the quality criterion. These plots show four different quality ciretria during a run of mc\_ANIRL and several runs of lstd\_ANIRL, for which the abscissa can not be the number of iterations.\\
+\label{ssec:quality}
+Figure \ref{fig:A} and \ref{fig:B} illustrate the difficulty of choosing the quality criterion ; these plots show four different quality ciretria during a run of mc\_ANIRL and several runs of lstd\_ANIRL. For the latter, the abscissa can not be the number of iterations as it always converges in one iteration.\\
 
-The $||\mu(s_0) - \mu_E(s_0)||_2$ term is widely discussed in \citep{abbeel2004apprenticeship}'s additional material. It bears an interesting relation with the difference between the expert's value function and the current value function in the initial state with respect \emph{to the current reward} (equation \ref{eqn:vs0}).\\
+The $||\mu^{\pi^{(j)}}(s_0) - \mu^{\pi_E}(s_0)||_2$ term is widely discussed in \citep{abbeel2004apprenticeship}'s additional material. It bears an interesting relation with the difference between the expert's value function and the current value function in the initial state with respect \emph{to the current reward} (equation \ref{eqn:vs0}).\\
 
-The fact that  the curves of  $||\mu(s_0) - \mu_E(s_0)||_2$ and $||\hat\mu(s_0) - \hat\mu_E(s_0)||_2$ are indistinguishable in figure \ref{fig:A} means that for it has access to a cheap simulator, mc\_ANIRL is as if it worked within an analitycal framework. This however can not be said of lstd\_ANIRL, for which the two curves are indeed different (Figure \ref{fig:B}). Not knowing the true value of $\mu_E(s_0)$ may be a problem for lstd\_ANIRL, as it can introduce an error int the halt criterion of the algorithm\footnote{This equation differs from what has been given as the second step of the algorithm in section \ref{sec:back}. This is because we implemented the version of the algorithm that uses a projection (see \citet{abbeel2004apprenticeship}'s supplementary material for an in-depth discussion of both versions). Although the mathematical expressions are different, both convey the same meaning and are exchangeable.}, $t = ||\bar\mu-\hat\mu_E(s_0)||$. After the algorithm has converged there is no way to know whether the policy is actually good or not other than actually testing it.\\
+The fact that  the curves of the true error term $||\mu^{\pi^{(j)}}(s_0) - \mu^{\pi_E}(s_0)||_2$ and  its estimate $||\hat\mu^{\pi^{(j)}}(s_0) - \hat\mu^{\pi_E}(s_0)||_2$ are indistinguishable in figure \ref{fig:A} means that for it has access to a cheap simulator, mc\_ANIRL works as if it had access to the exact values. This however can not be said of lstd\_ANIRL, for which the two curves are indeed different (Figure \ref{fig:B}). Not knowing the true value of $\mu^{\pi_E}(s_0)$ may be a problem for lstd\_ANIRL, as it can introduce an error int the halt criterion of the algorithm\footnote{This equation differs from what has been given as the second step of the algorithm in section \ref{sec:back}. This is because we implemented the version of the algorithm that uses a projection (see \citet{abbeel2004apprenticeship}'s supplementary material for an in-depth discussion of both versions). Although the mathematical expressions are different, both convey the same meaning and are exchangeable.}, $t = ||\bar\mu^{(j)}-\hat\mu^{\pi_E}(s_0)||$ where $\bar\mu^{(j)}$ is the projection of $\mu^{\pi_E}$ on $(\mu^{\pi^{(j-1)}},\mu^{\pi^{(j)}})$. After the algorithm has converged there is no way to know whether the policy is actually good or not other than actually testing it.\\
 
-It shall be noted that although it plays its role, the halt criterion is not a good measure of the quality of the current policy in mc\_ANIRL either, as it can be low when the policy is bad. The best policy, however, can be easily chosen from the $||\mu(s_0) - \mu_E(s_0)||_2$ term, which mc\_ANIRL can compute. When this term is low, the objective performance (that is, $V^E(s_0)-V^\pi(s_0)$ with respect to the unknow true reward function) is low too. 
+It shall be noted that although it plays its role, the halt criterion is not a good measure of the quality of the current policy in mc\_ANIRL either, as it can be low when the policy is bad. The best policy, however, can be easily chosen from the $||\mu^{\pi^{(j)}}(s_0) - \mu^{\pi_E}(s_0)||_2$ term, which mc\_ANIRL can compute. When this term is low, the objective performance (that is, $V^{\pi_E}(s_0)-V^{\pi^{(j)}}(s_0)$ with respect to the unknow true reward function) is low too. 
 \section{Conclusion}
 \label{sec:conclusion}
 Given some transitions generated by an expert controlling a system and maximizing in the long run an unknown reward, we ported \citet{abbeel2004apprenticeship}'s approach to apprenticeship learning vie inverse reinforcement learning to a batch, model-free, off-policy setting at the cost of the need for a bigger number of samples from the expert. We believe this cost is not prohibitive as our approach only requires isolated samples which are often less difficult to get than whole trajectories as needed by the original approach. Furthermore, our method requires less computing power as it converges after only one iteration (that is, as far as we witnessed in our experimental setting).\\
 
-The simple idea of using LSTD to estimate the feature expectation can be applied to other algorithms as well, for example \cite{abbeel2004apprenticeship,syed2008apprenticeship,syed2008game,ziebart2008maximum}.\\
-
+The simple idea of using LSTD to estimate the feature expectation could be applied to other algorithms as well, for example \cite{abbeel2004apprenticeship,syed2008apprenticeship,syed2008game,ziebart2008maximum}.\\
 The exact reason why LSTD$\mu$ converges so fast should be investigated and a bigger experiment should be run, possibly on a continuous problem.\\
 \begin{figure}
-\includegraphics[width=\textwidth]{../Code/courbe_e.pdf}
-\caption{$||\mu_E(s_0)-\mu_\pi(s_0)||_2$ with respect to the number of samples available from the expert. Our algorithm is not as good as \citet{abbeel2004apprenticeship} with very few samples, but make up for it very soon.}
+\centering
+\input{../Code/courbe_e}
+\caption{$||\mu^{\pi}(s_0) - \mu^{\pi_E}(s_0)||_2$ where $\pi$ is the policy for which this term is the lowest for the whole run, with respect to the number of samples available from the expert. Our algorithm is not as good as \citet{abbeel2004apprenticeship} with very few samples, but make up for it very soon.}
 \label{fig:E}
 \end{figure}
-\label{sec:perf}
 \begin{figure}
-\includegraphics[width=\textwidth]{../Code/courbe_a.pdf}
+\centering
+\input{../Code/courbe_a}
 \caption{Different criteria with respect to the number of iterations for a run of mc\_ANIRL.}
 \label{fig:A}
 \end{figure}
 \begin{figure}
-\includegraphics[width=\textwidth]{../Code/courbe_b.pdf}
+\centering
+\input{../Code/courbe_b}
 \caption{Different criteria with respect to the number of samples from the expert, for several runs of lstd\_ANIRL.}
 \label{fig:B}
 \end{figure}
