Seconde soumission à JFPDA : correction de la mention de l'INRIA

--- a/main.tex
+++ b/main.tex
@@ -38,7 +38,7 @@
  \institute{
  1. Supélec-Metz Campus, IMS Research group, France, \texttt{nom.prenom@supelec.fr}\\
  2. UMI 2958 CNRS - GeorgiaTech, France\\
- 3. Equipe ABC, Loria, INRIA Grand-Est, Nancy, France.
+ 3. Equipe ABC, LORIA-CNRS, France.
  }
 \date{\today}
 
