--- a/TODO.org
+++ b/TODO.org
@@ -27,4 +27,5 @@
 ** Autres
 *** TODO Transformer ErrorBars.py en un Makefile
     Il a probablement moyen de faire en sorte que la vérification des données existantes s'écrive en quelques règles simples
-
+    
+*** TODO Ecrire le README
